--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.11.2",
+		"@iizuna/pwned-passwords": "^1.0.0",
 		"@types/material-design-lite": "^1.1.15",
 		"iizuna": "^3.5.0",
 		"material-design-lite": "^1.3.0"
