--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"noImplicitAny": false,
 		"sourceMap": false,
 		"rootDir": "src",
-		"outDir": "dist/js",
+		"outDir": "public",
 		"noEmitOnError": true,
 		"typeRoots": ["node_modules/@types"],
 		"experimentalDecorators": true
