--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thanks you for contributing to the chrome-password-generator!'
+        issue-message: 'Thank you for contributing to the chrome-password-generator!'
         pr-message: 'Thank you for contributing to the chrome-password-generator! A Maintainer will soon review your pull request.'
