--- a/package.json
+++ b/package.json
@@ -5,11 +5,26 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "gulp",
-		"build-sass": "gulp sass"
+		"build-sass": "gulp sass",
+		"test": "nyc mocha -r ts-node/register -r jsdom-global/register tests/unit/**/*.spec.ts"
 	},
 	"author": {
 		"name": "Tim Rücker",
 		"email": "tim.ruecker@ymail.com"
+	},
+	"nyc": {
+		"cache": true,
+		"extension": [
+			".ts"
+		],
+		"exclude": [
+			"lib",
+			"coverage",
+			"**/*.d.ts"
+		],
+		"reporter": [
+			"html"
+		]
 	},
 	"license": "MIT",
 	"dependencies": {
@@ -19,15 +34,23 @@
 		"material-design-lite": "^1.3.0"
 	},
 	"devDependencies": {
+		"@types/chai": "^4.1.7",
 		"@types/chrome": "0.0.86",
-		"ts-loader": "^5.4.5",
+		"@types/mocha": "^5.2.6",
 		"browserify": "^16.2.3",
+		"chai": "^4.2.0",
 		"gulp": "^4.0.2",
 		"gulp-cli": "^2.2.0",
+		"gulp-sass": "^4.0.2",
 		"gulp-typescript": "^5.0.1",
 		"gulp-uglify": "^3.0.2",
-		"gulp-sass": "^4.0.2",
+		"jsdom": "^13.2.0",
+		"jsdom-global": "^3.0.2",
+		"mocha": "^5.2.0",
 		"node-sass": "^4.12.0",
+		"nyc": "^14.1.1",
+		"ts-loader": "^5.4.5",
+		"ts-node": "^7.0.1",
 		"tsify": "^4.0.1",
 		"typescript": "^3.5.2",
 		"vinyl-buffer": "^1.0.1",
